# Ashmanov

./: README.md  pyproject.toml  test.html  Тестовое задание- Разработчик (август 2024).docx
src/task1/: test2.py
src/task1/app/: main.py
src/task1/test/: test_task1.py
src/task1/tests/: test_task1.py
src/task2/: docker-compose.yaml
src/task2/ORM/: querry.py
src/task2/SQL/app/: request.sql
src/task3/: config.yaml.example
src/task3/app/: asgi.py  main.py
src/task3/app/core/: config.py  router.py
src/task3/app/services/: parser.py  redirect.py  test_request.py
src/task3/tests/: test666.py  test_async.py  test_redir_parser.py  test_system.py  test_task3.py
